Error prone (#2918)
* Drop obsolete Javadoc config

* Junie, task 4

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Junie, task 5

* Error prone

* Error prone

* Error prone

* Error prone

* Try to fix Micronaut

* Disable error prone in Micronaut

* Clean-uy micronaut config